--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,108 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
-  margin: 0;
-  padding: 0;
+  border: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 0;
-  outline: 0;
-  vertical-align: baseline;
-  font-weight: inherit;
   font-family: inherit;
-  font-style: inherit;
   font-size: 100%;
+  font-style: inherit;
+  font-weight: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+
+body {
+  height: 100%;
+}
+
+#root {
+  background-color: #1a1a1d;
+  color: #dcdde1;
+  font-family: "Roboto", sans-serif;
+}
+
+nav {
+  background-color: black;
+  height: 5rem;
+}
+
+nav .nav-links {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+nav .nav-links .nav-item {
+  list-style: none;
+}
+
+nav .nav-links .nav-item .nav-link {
+  color: #dcdde1;
+  font-size: 1.25rem;
+  text-decoration: none;
+}
+
+.home .search {
+  margin: 2.5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.home .search input {
+  margin: auto;
+  width: 75%;
+  background-color: #dcdde1;
+  border: 1px solid #4e4e50;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+}
+
+.home .search .buttons {
+  margin-top: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  height: 5rem;
+}
+
+.home .search .buttons .btn {
+  background-color: #dcdde1;
+  color: #1a1a1d;
+  height: 1.75rem;
+  width: 8rem;
+  border: 1px solid #4e4e50;
+  border-radius: 0.25rem;
+  font-size: 1.05rem;
+}
+
+.home .random-photos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 /*# sourceMappingURL=index.css.map */
