--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,12 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+$main-font: 'Roboto', sans-serif;
+
+$dark-gray: #1a1a1d;
+$gray: #4e4e50;
+$dark-red: #6f2232;
+$pink: #950740;
+$bright-red: #c3073f;
+$white: #dcdde1;
+
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   border: 0;
-  outline: 0;
-  vertical-align: baseline;
-  font-weight: inherit;
+  box-sizing: border-box;
   font-family: inherit;
-  font-style: inherit;
   font-size: 100%;
+  font-style: inherit;
+  font-weight: inherit;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+
+body {
+  height: 100%;
+}
+
+#root {
+  background-color: $dark-gray;
+  color: $white;
+  font-family: $main-font;
+}
+
+nav {
+  background-color: black;
+  height: 5rem;
+
+  .nav-links {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: space-evenly;
+
+    .nav-item {
+      list-style: none;
+
+      .nav-link {
+        color: $white;
+        font-size: 1.25rem;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.home {
+  .search {
+    margin: 2.5rem 0;
+    display: flex;
+    flex-direction: column;
+
+    input {
+      margin: auto;
+      width: 75%;
+      background-color: $white;
+      border: 1px solid $gray;
+      border-radius: 0.25rem;
+      padding: 0.5rem;
+    }
+
+    .buttons {
+      margin-top: 0.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      height: 5rem;
+
+      .btn {
+        background-color: $white;
+        color: $dark-gray;
+        height: 1.75rem;
+        width: 8rem;
+        border: 1px solid $gray;
+        border-radius: 0.25rem;
+        font-size: 1.05rem;
+      }
+    }
+  }
+
+  .random-photos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
 }
