--- a/src/css/index.css
+++ b/src/css/index.css
@@ -229,6 +229,58 @@ nav .slide-in {
   margin: 1rem;
 }
 
+.photo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.photo .photo-description-h {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.photo .photo-description {
+  font-size: 1.25rem;
+  margin-bottom: 1.5rem;
+}
+
+.photo .photographer {
+  margin-bottom: 1rem;
+  font-size: 1.25rem;
+}
+
+.photo img {
+  margin-bottom: 1rem;
+}
+
+.photo .photo-info {
+  font-size: 1.2rem;
+}
+
+footer {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 6vh;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 * {
   border: 0;
   -webkit-box-sizing: border-box;
@@ -243,6 +295,10 @@ nav .slide-in {
   vertical-align: baseline;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: #1a1a1d;
   color: #dcdde1;
@@ -250,7 +306,24 @@ body {
   height: 100%;
 }
 
+#root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 100%;
+}
+
 main {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   margin-top: 8rem;
 }
 /*# sourceMappingURL=index.css.map */
