--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,8 @@
 @import './partials/navbar';
 @import './partials/home';
 @import './partials/topics';
+@import './partials/photo';
+@import './partials/footer';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 $main-font: 'Roboto', sans-serif;
 
@@ -24,6 +26,10 @@ $white: #dcdde1;
   vertical-align: baseline;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: $dark-gray;
   color: $white;
@@ -31,10 +37,14 @@ body {
   height: 100%;
 }
 
-// body::-webkit-scrollbar {
-//   display: none;
-// }
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
+}
 
 main {
+  flex-grow: 1;
   margin-top: 8rem;
 }
