--- a/src/css/index.css
+++ b/src/css/index.css
@@ -109,12 +109,12 @@ nav .slide-in {
 
 @media screen and (min-width: 767px) {
   nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
   nav h1 {
     display: block;
@@ -136,10 +136,10 @@ nav .slide-in {
     list-style: none;
   }
   nav .nav-links .nav-item .nav-link {
+    color: #dcdde1;
     font-size: 1.1rem;
     margin: 0 1rem;
     text-decoration: none;
-    color: #dcdde1;
   }
 }
 
@@ -157,18 +157,14 @@ nav .slide-in {
 }
 
 .home header .search {
-  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.75);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  height: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -177,46 +173,17 @@ nav .slide-in {
   width: 100%;
 }
 
-.home header .search .search-bar {
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.home header .search .search-bar input {
+.home header .search input {
   background-color: #dcdde1;
   border-radius: 0.25rem;
+  margin-right: 1rem;
   padding: 0.5rem;
-  width: 80%;
+  width: 75%;
 }
 
-.home header .search .buttons {
-  width: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 5rem;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-.home header .search .buttons .btn {
-  background-color: #dcdde1;
-  border-radius: 0.25rem;
-  color: #4e4e50;
-  height: 1.75rem;
-  width: 8rem;
+.home header .search .btn {
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
 }
 
 .home .random-photos,
@@ -291,6 +258,9 @@ nav .slide-in {
 }
 
 .photo {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -298,12 +268,9 @@ nav .slide-in {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 80%;
   margin: 0 auto;
   text-align: center;
+  width: 80%;
 }
 
 .photo .photo-description-h {
@@ -317,8 +284,8 @@ nav .slide-in {
 }
 
 .photo .photographer {
-  margin-bottom: 1rem;
   font-size: 1.25rem;
+  margin-bottom: 1rem;
 }
 
 .photo img {
