--- a/src/css/partials/_home.scss
+++ b/src/css/partials/_home.scss
@@ -18,44 +18,26 @@ $white: #dcdde1;
     }
 
     .search {
-      height: 100%;
       align-items: center;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.75);
       display: flex;
-      flex-direction: column;
+      height: 100%;
       justify-content: center;
       position: absolute;
       top: 0;
       width: 100%;
 
-      .search-bar {
-        width: 100%;
-        align-items: center;
-        display: flex;
-        justify-content: center;
-
-        input {
-          background-color: $white;
-          border-radius: 0.25rem;
-          padding: 0.5rem;
-          width: 80%;
-        }
+      input {
+        background-color: $white;
+        border-radius: 0.25rem;
+        margin-right: 1rem;
+        padding: 0.5rem;
+        width: 75%;
       }
 
-      .buttons {
-        width: 100%;
-        align-items: center;
-        display: flex;
-        height: 5rem;
-        justify-content: space-evenly;
-
-        .btn {
-          background-color: $white;
-          border-radius: 0.25rem;
-          color: $gray;
-          height: 1.75rem;
-          width: 8rem;
-        }
+      .btn {
+        font-size: 1.5rem;
+        margin: 0 0.5rem;
       }
     }
   }
