--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,10 +6,21 @@ nav {
   top: 0;
   width: 100%;
   z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 nav h1 {
-  display: none;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  font-weight: bold;
 }
 
 nav .menu-icon {
@@ -117,7 +128,6 @@ nav .slide-in {
     display: flex;
   }
   nav h1 {
-    display: block;
     font-size: 1.25rem;
     margin: 0 1rem;
   }
@@ -144,7 +154,7 @@ nav .slide-in {
 }
 
 .home header {
-  height: 35vh;
+  height: 25vh;
   margin-bottom: 2.5rem;
   position: relative;
 }
@@ -160,7 +170,7 @@ nav .slide-in {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: rgba(0, 0, 0, 0.75);
+  background: rgba(0, 0, 0, 0.5);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -168,22 +178,26 @@ nav .slide-in {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0 1rem;
   position: absolute;
   top: 0;
   width: 100%;
 }
 
 .home header .search input {
-  background-color: #dcdde1;
   border-radius: 0.25rem;
-  margin-right: 1rem;
   padding: 0.5rem;
   width: 75%;
 }
 
 .home header .search .btn {
-  font-size: 1.5rem;
-  margin: 0 0.5rem;
+  background: #fff;
+  border-radius: 0.25rem;
+  color: #1a1a1d;
+  height: 2.25rem;
+  margin-left: 0.5rem;
+  padding: 0.5rem;
+  width: 2.25rem;
 }
 
 .home .random-photos,
@@ -196,10 +210,18 @@ nav .slide-in {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 1rem;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  gap: 2rem;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 0 2rem;
+}
+
+.home .random-photo {
+  max-width: 100%;
+}
+
+.home .random-photo a img {
+  width: 100%;
 }
 
 .topics h1 {
