--- a/src/css/partials/_home.scss
+++ b/src/css/partials/_home.scss
@@ -7,7 +7,7 @@ $white: #dcdde1;
 
 .home {
   header {
-    height: 35vh;
+    height: 25vh;
     margin-bottom: 2.5rem;
     position: relative;
 
@@ -19,25 +19,29 @@ $white: #dcdde1;
 
     .search {
       align-items: center;
-      background: rgba(0, 0, 0, 0.75);
+      background: rgba(0, 0, 0, 0.5);
       display: flex;
       height: 100%;
       justify-content: center;
+      padding: 0 1rem;
       position: absolute;
       top: 0;
       width: 100%;
 
       input {
-        background-color: $white;
         border-radius: 0.25rem;
-        margin-right: 1rem;
         padding: 0.5rem;
         width: 75%;
       }
 
       .btn {
-        font-size: 1.5rem;
-        margin: 0 0.5rem;
+        background: #fff;
+        border-radius: 0.25rem;
+        color: #1a1a1d;
+        height: 2.25rem;
+        margin-left: 0.5rem;
+        padding: 0.5rem;
+        width: 2.25rem;
       }
     }
   }
@@ -47,7 +51,18 @@ $white: #dcdde1;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-evenly;
+    gap: 2rem;
+    justify-content: space-around;
+    margin: 0 2rem;
+  }
+
+  .random-photo {
+    max-width: 100%;
+
+    a {
+      img {
+        width: 100%;
+      }
+    }
   }
 }
