--- a/src/css/partials/_footer.scss
+++ b/src/css/partials/_footer.scss
@@ -1,6 +1,7 @@
 footer {
   align-items: center;
   display: flex;
-  height: 6vh;
+  height: 7vh;
   justify-content: center;
+  margin-top: 2rem;
 }
