--- a/src/css/partials/_navbar.scss
+++ b/src/css/partials/_navbar.scss
@@ -6,20 +6,20 @@ $bright-red: #c3073f;
 $white: #dcdde1;
 
 nav {
+  align-items: center;
   background-color: black;
+  display: flex;
   height: 5rem;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 
   h1 {
     font-size: 1.5rem;
-    margin-left: 1rem;
     font-weight: bold;
+    margin-left: 1rem;
   }
 
   .menu-icon {
@@ -28,6 +28,9 @@ nav {
     height: 100%;
     justify-content: flex-end;
     margin-right: 1.25rem;
+    position: absolute;
+    z-index: 2;
+    right: 0;
 
     button {
       align-items: center;
@@ -50,15 +53,18 @@ nav {
     border-bottom-right-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    height: 20vh;
-    justify-content: space-evenly;
+    height: 100vh;
+    justify-content: center;
     margin: auto;
     position: relative;
+    width: 100%;
 
     .nav-item {
       list-style: none;
+      margin-bottom: 2rem;
 
       .nav-link {
+        font-size: 1.75rem;
         color: $white;
         text-decoration: none;
       }
@@ -67,6 +73,10 @@ nav {
 
   .slide-in {
     animation: slide-in-keyframes 0.5s;
+  }
+
+  .hidden {
+    display: none;
   }
 
   @keyframes slide-in-keyframes {
