--- a/src/css/partials/_photo.scss
+++ b/src/css/partials/_photo.scss
@@ -1,31 +1,40 @@
-.photo {
+.photo-container {
   align-items: center;
   display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  text-align: center;
-  width: 80%;
+  justify-content: center;
 
-  .photo-description-h {
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-  }
+  .photo {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    text-align: center;
 
-  .photo-description {
-    font-size: 1.25rem;
-    margin-bottom: 1.5rem;
-  }
+    img {
+      margin-top: 2rem;
+      width: 100%;
+      max-width: 720px;
+      padding: 0.5rem 1.5rem 1.5rem;
+    }
 
-  .photographer {
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
-  }
+    .photo-description-h {
+      font-size: 1.25rem;
+      font-weight: 700;
+    }
 
-  img {
-    margin-bottom: 1rem;
-  }
+    .photo-description {
+      max-width: 720px;
+      font-size: 1.05rem;
+      margin: 0 2rem 1rem;
+    }
 
-  .photo-info {
-    font-size: 1.2rem;
+    .photo-info {
+      margin-top: 1rem;
+      font-size: 1.2rem;
+      font-weight: 700;
+      padding-left: 1.5rem;
+      text-align: left;
+      width: 100%;
+    }
   }
 }
