--- a/src/css/partials/_navbar.scss
+++ b/src/css/partials/_navbar.scss
@@ -7,7 +7,7 @@ $white: #dcdde1;
 
 nav {
   align-items: center;
-  background-color: black;
+  background-color: #000;
   display: flex;
   height: 5rem;
   justify-content: space-between;
@@ -29,8 +29,8 @@ nav {
     justify-content: flex-end;
     margin-right: 1.25rem;
     position: absolute;
-    z-index: 2;
     right: 0;
+    z-index: 2;
 
     button {
       align-items: center;
@@ -64,8 +64,8 @@ nav {
       margin-bottom: 2rem;
 
       .nav-link {
-        font-size: 1.75rem;
         color: $white;
+        font-size: 1.75rem;
         text-decoration: none;
       }
     }
